--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@langchain/qdrant": "^0.1.3",
     "@tailwindcss/vite": "^4.1.12",
     "dotenv": "^16.4.5",
+    "framer-motion": "^12.23.12",
     "langchain": "^0.3.31",
     "lucide-react": "^0.540.0",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.4.54",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
