feat: update dependencies and enhance UI components
- Added cheerio and puppeteer to package.json for web scraping capabilities.
- Refactored App.tsx to improve message handling and UI feedback.
- Enhanced ChatWindow component by removing loading indicator and improving input handling.
- Updated ProgressBar component to change color scheme from cyan to indigo.
- Refined RagStore component for better UI/UX, including improved collection handling and styling.
- Modified SourceButtons component to use indigo color scheme for buttons.
- Added custom scrollbar styles in index.css for better aesthetics in scrollable containers.

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@langchain/community": "^0.3.53",
+    "@langchain/core": "^0.3.72",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "openai": "^5.12.2"
+    "langchain": "^0.3.31",
+    "node-fetch": "^3.3.2",
+    "openai": "^5.12.2",
   }
 }
