--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@langchain/openai": "^0.6.9",
     "@langchain/qdrant": "^0.1.3",
     "@tailwindcss/vite": "^4.1.12",
+    "cheerio": "^1.1.2",
     "dotenv": "^16.4.5",
     "framer-motion": "^12.23.12",
     "langchain": "^0.3.31",
     "lucide-react": "^0.540.0",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.4.54",
+    "puppeteer": "^24.16.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
