--- a/backend/package.json
+++ b/backend/package.json
@@ -7,19 +7,19 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@langchain/community": "^0.3.53",
     "@langchain/core": "^0.3.72",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "langchain": "^0.3.31",
     "node-fetch": "^3.3.2",
     "openai": "^5.12.2",
+    "dotenv": "^17.2.1"
+  },
+  "overrides": {
+    "openai": "^5.12.2",
+    "dotenv": "^17.2.1"
   }
 }
